oxiplate-derive/tests/broken/extends/extends-after-static-text.stderr
error: Unexpected 'extends' statement after content already present in template
 --> tests/broken/extends/extends-after-static-text.rs:4:27
  |
4 | #[oxiplate_inline(r#"hello{% extends "multiple-blocks.html.oxip" %}"#)]
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
